[gd_scene load_steps=17 format=4 uid="uid://btqikoqo7y031"]

[ext_resource type="Script" path="res://levels/testing/egg_test.gd" id="1_m5xcn"]
[ext_resource type="PackedScene" uid="uid://d2nvjfxk0ropj" path="res://taco/taco.tscn" id="1_srogn"]
[ext_resource type="Texture2D" uid="uid://cblnycn5tj6wl" path="res://tilesets/testing/boogie_demo_tileset.png" id="2_vmsgt"]
[ext_resource type="Texture2D" uid="uid://csne2bw37r38i" path="res://levels/testing/sprites/egg.jpg" id="3_ewh0f"]
[ext_resource type="Texture2D" uid="uid://dvhkhnmd0pud1" path="res://taco/sprites/taco_animation_sheet.png" id="4_4bnb2"]
[ext_resource type="FontFile" uid="uid://b3i13hxs1rmbd" path="res://fonts/pokemon-emerald.ttf" id="5_cnhqo"]
[ext_resource type="PackedScene" uid="uid://wqu01jgru5l3" path="res://interactives/scenes/interactive_area.tscn" id="7_nipdh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3roib"]
texture = ExtResource("2_vmsgt")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, 1, 0, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -4, 8, -8, 8, 1, -8, 1)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 1, 0, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 0, 3, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ib0f2"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_3roib")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rfw7f"]
texture = ExtResource("2_vmsgt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_tyaoh"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rfw7f")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g2ly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q34u1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hhvy8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d4tk0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_57870"]

[node name="EggTest" type="Node2D"]
script = ExtResource("1_m5xcn")

[node name="Taco" parent="." instance=ExtResource("1_srogn")]

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//r/AQAAAAIAAAD9//v/AQAAAAIAAAD9//z/AQAAAAIAAAD9//3/AQAAAAIAAAD9//7/AQAAAAIAAAD9////AQAAAAIAAAD9/wAAAQAAAAIAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAASAAAAAQAAAAAAAAATAAAAAQAAAAAAAAAUAAAAAQAAAAAAAAAVAAAAAQAAAAAAAAAWAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAYAAAAAQAAAAAAAAAZAAAAAQAAAAAAAAAaAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAcAAAAAQAAAAAAAAAdAAAAAQAAAAAAAAAeAAAAAQAAAAAAAAAfAAAAAQAAAAAAAAAgAAAAAQAAAAAAAAAhAAAAAQAAAAAAAAAiAAAAAQAAAAAAAAAjAAAAAQAAAAAAAAAkAAAAAQAAAAAAAAAlAAAAAQAAAAAAAAAmAAAAAQAAAAAAAAAnAAAAAQAAAAAAAAAoAAAAAQAAAAAAAAApAAAAAQAAAAAAAAAqAAAAAQAAAAAAAAAqAPr/AQAAAAIAAAAqAPv/AQAAAAIAAAAqAPz/AQAAAAIAAAAqAP3/AQAAAAIAAAAqAP7/AQAAAAIAAAAqAP//AQAAAAIAAAAMAP//AQAAAAIAAAAMAP7/AQAAAAIAAAAMAP3/AQAAAAIAAAANAP3/AQAAAAIAAAAOAP3/AQAAAAIAAAAPAP3/AQAAAAIAAAAPAP7/AQAAAAIAAAAPAP//AQAAAAIAAAAMAPv/AQAAAAIAAAANAPz/AQAAAAIAAAAOAPz/AQAAAAIAAAAKAP//AQAAAAIAAAAKAP7/AQAAAAIAAAAKAP3/AQAAAAIAAAAKAPz/AQAAAAIAAAAKAPv/AQAAAAIAAAAKAPr/AQAAAAIAAAAKAPn/AQAAAAIAAAAfAPv/AQAAAAEAABAfAPD/AQAAAAEAAEASAPD/AQAAAAEAAAASAOn/AQAAAAEAAFA=")
tile_set = SubResource("TileSet_ib0f2")

[node name="InvisibleCollisions" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAPz/AAAAAAIAAAARAPz/AAAAAAIAAAASAPz/AAAAAAIAAAATAPz/AAAAAAIAAAAUAPz/AAAAAAIAAAAVAPz/AAAAAAIAAAAWAPz/AAAAAAIAAAAXAPz/AAAAAAIAAAAYAPz/AAAAAAIAAAAZAPz/AAAAAAIAAAAaAPz/AAAAAAIAAAAbAPz/AAAAAAIAAAAcAPz/AAAAAAIAAAAdAPz/AAAAAAIAAAAeAPz/AAAAAAIAAAAfAPz/AAAAAAIAAAAPAPz/AAAAAAIAAAAPAPn/AAAAAAIAAAAQAPn/AAAAAAIAAAARAPn/AAAAAAIAAAASAPn/AAAAAAIAAAATAPn/AAAAAAIAAAAUAPn/AAAAAAIAAAAVAPn/AAAAAAIAAAAWAPn/AAAAAAIAAAAXAPn/AAAAAAIAAAAYAPn/AAAAAAIAAAAZAPn/AAAAAAIAAAAaAPn/AAAAAAIAAAAbAPn/AAAAAAIAAAAcAPn/AAAAAAIAAAAdAPn/AAAAAAIAAAAdAPj/AAAAAAIAAAAdAPL/AAAAAAIAAAAdAPP/AAAAAAIAAAAdAPT/AAAAAAIAAAAdAPX/AAAAAAIAAAAdAPb/AAAAAAIAAAAdAPf/AAAAAAIAAAAgAPH/AAAAAAIAAAAgAPL/AAAAAAIAAAAgAPP/AAAAAAIAAAAgAPT/AAAAAAIAAAAgAPX/AAAAAAIAAAAgAPb/AAAAAAIAAAAgAPf/AAAAAAIAAAAgAPj/AAAAAAIAAAAcAPL/AAAAAAIAAAAbAPL/AAAAAAIAAAAaAPL/AAAAAAIAAAAZAPL/AAAAAAIAAAAYAPL/AAAAAAIAAAAXAPL/AAAAAAIAAAAgAPD/AAAAAAIAAAAgAO//AAAAAAIAAAAfAO//AAAAAAIAAAAeAO//AAAAAAIAAAAdAO//AAAAAAIAAAAcAO//AAAAAAIAAAAbAO//AAAAAAIAAAAaAO//AAAAAAIAAAAZAO//AAAAAAIAAAAYAO//AAAAAAIAAAAXAO//AAAAAAIAAAAgAPn/AAAAAAIAAAAgAPr/AAAAAAIAAAAgAPv/AAAAAAIAAAAgAPz/AAAAAAIAAAAWAO//AAAAAAIAAAAWAPL/AAAAAAIAAAAVAPL/AAAAAAIAAAAUAPL/AAAAAAIAAAATAPL/AAAAAAIAAAASAPL/AAAAAAIAAAARAPL/AAAAAAIAAAARAOr/AAAAAAIAAAARAOv/AAAAAAIAAAARAOz/AAAAAAIAAAARAO3/AAAAAAIAAAARAO7/AAAAAAIAAAARAO//AAAAAAIAAAARAPD/AAAAAAIAAAARAPH/AAAAAAIAAAAVAO//AAAAAAIAAAAVAOv/AAAAAAIAAAAVAOz/AAAAAAIAAAAVAO3/AAAAAAIAAAAVAO7/AAAAAAIAAAARAOn/AAAAAAIAAAARAOj/AAAAAAIAAAASAOj/AAAAAAIAAAATAOj/AAAAAAIAAAAUAOj/AAAAAAIAAAAVAOj/AAAAAAIAAAAWAOj/AAAAAAIAAAAXAOj/AAAAAAIAAAAYAOj/AAAAAAIAAAAZAOj/AAAAAAIAAAAWAOv/AAAAAAIAAAAXAOv/AAAAAAIAAAAYAOv/AAAAAAIAAAAZAOv/AAAAAAIAAAA=")
tile_set = SubResource("TileSet_tyaoh")

[node name="EggTransformTrigger" type="Area2D" parent="."]
position = Vector2(97, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EggTransformTrigger"]
shape = SubResource("RectangleShape2D_5g2ly")

[node name="Sprite2D" type="Sprite2D" parent="EggTransformTrigger"]
position = Vector2(1.90735e-06, 2.86102e-06)
scale = Vector2(0.0408333, 0.0391667)
texture = ExtResource("3_ewh0f")

[node name="TransformReturnTrigger" type="Area2D" parent="."]
position = Vector2(481, -353)

[node name="Sprite2D" type="Sprite2D" parent="TransformReturnTrigger"]
texture = ExtResource("4_4bnb2")
hframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransformReturnTrigger"]
shape = SubResource("RectangleShape2D_q34u1")

[node name="Label" type="Label" parent="TransformReturnTrigger"]
offset_left = -20.0
offset_top = -45.0
offset_right = 36.0
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("5_cnhqo")
theme_override_font_sizes/font_size = 15
text = "Transform
Back"

[node name="RicochetTriggerUp" parent="." instance=ExtResource("7_nipdh")]
position = Vector2(502, -75)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RicochetTriggerUp"]
shape = SubResource("CircleShape2D_hhvy8")

[node name="RicochetTriggerUp2" parent="." instance=ExtResource("7_nipdh")]
position = Vector2(301, -252)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RicochetTriggerUp2"]
shape = SubResource("CircleShape2D_hhvy8")

[node name="RicochetTriggerLeft" parent="." instance=ExtResource("7_nipdh")]
position = Vector2(501, -244)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RicochetTriggerLeft"]
shape = SubResource("CircleShape2D_d4tk0")

[node name="RicochetTriggerRight" parent="." instance=ExtResource("7_nipdh")]
position = Vector2(299, -352)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RicochetTriggerRight"]
shape = SubResource("CircleShape2D_57870")

[connection signal="body_entered" from="EggTransformTrigger" to="." method="_on_egg_transform_trigger_body_entered"]
[connection signal="body_entered" from="TransformReturnTrigger" to="." method="_on_transform_return_trigger_body_entered"]
[connection signal="body_entered" from="RicochetTriggerUp" to="." method="_on_ricochet_trigger_up_body_entered"]
[connection signal="body_exited" from="RicochetTriggerUp" to="." method="_on_ricochet_trigger_up_body_exited"]
[connection signal="body_entered" from="RicochetTriggerUp2" to="." method="_on_ricochet_trigger_up_body_entered"]
[connection signal="body_exited" from="RicochetTriggerUp2" to="." method="_on_ricochet_trigger_up_body_exited"]
[connection signal="body_entered" from="RicochetTriggerLeft" to="." method="_on_ricochet_trigger_left_body_entered"]
[connection signal="body_entered" from="RicochetTriggerRight" to="." method="_on_ricochet_trigger_right_body_entered"]
